# ChangeLog for xfce-base/xfce4
# Copyright 2000-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/xfce-base/xfce4/ChangeLog,v 1.120 2008/03/20 21:56:32 drac Exp $

  20 Mar 2008; Samuli Suominen <drac@gentoo.org> xfce4-4.4.2.ebuild:
  Relax Thunar dep so 0.8.0 is also allowed.

  17 Dec 2007; Jeroen Roovers <jer@gentoo.org> xfce4-4.4.2.ebuild:
  Stable for HPPA (bug #201747).

  12 Dec 2007; Brent Baude <ranger@gentoo.org> xfce4-4.4.2.ebuild:
  Marking xfce4-4.4.2 ppc64 stable for bug 201747

  12 Dec 2007; Raúl Porcel <armin76@gentoo.org> xfce4-4.4.2.ebuild:
  alpha/ia64/sparc stable wrt #201747

  09 Dec 2007; Tobias Scherbaum <dertobi123@gentoo.org> xfce4-4.4.2.ebuild:
  ppc stable, bug #201747

  09 Dec 2007; Dawid Węgliński <cla@gentoo.org> xfce4-4.4.2.ebuild:
  Stable on amd64/x86 (bug #201747)

  02 Dec 2007; Samuli Suominen <drac@gentoo.org> xfce4-4.4.2.ebuild:
  Bump Thunar and Terminal deps. for 4.4.2.

  30 Nov 2007; Samuli Suominen <drac@gentoo.org> xfce4-4.4.2.ebuild:
  Allow usage of gnome-screensaver instead of xscreensaver too.

*xfce4-4.4.2 (18 Nov 2007)

  18 Nov 2007; Samuli Suominen <drac@gentoo.org> +xfce4-4.4.2.ebuild:
  Version bump.

  29 Sep 2007; Samuli Suominen <drac@gentoo.org> xfce4-4.4.1.ebuild:
  Fix quoting around D.

  18 Aug 2007; Christoph Mende <angelos@gentoo.org> xfce4-4.4.1.ebuild:
  Moved xfce4-appfinder dependency to !minimal

  07 Jun 2007; Samuli Suominen <drac@gentoo.org> xfce4-4.4.1.ebuild:
  Stable on arm.

  01 Jun 2007; Brent Baude <ranger@gentoo.org> xfce4-4.4.1.ebuild:
  Marking xfce4-4.4.1 ppc64 stable for bug #178510

  28 May 2007; Samuli Suominen <drac@gentoo.org> ChangeLog:
  Fix Manifest.

  27 May 2007; Samuli Suominen <drac@gentoo.org> -xfce4-4.2.3.2.ebuild:
  Remove old version.

  27 May 2007; Joshua Kinard <kumba@gentoo.org> xfce4-4.4.1.ebuild:
  Stable on mips.

  24 May 2007; Lars Weiler <pylon@gentoo.org> xfce4-4.4.1.ebuild:
  Stable on ppc; bug #178510.
